// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiActionButton when rendered should match the snapshot 1`] = `
.c1 {
  display: inline-block;
  position: relative;
}

.c1 > .c2 {
  margin: 0;
}

.c1 > .c2:focus {
  border: 3px solid #FFB500;
  outline: none;
  margin: -1px;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
  border-left-width: 0;
  padding: 0 10px;
}

.c4:focus {
  outline: solid 3px #FFB500;
}

.c4 + .c3 {
  margin-left: 16px;
}

.c4:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c4 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c2 + .c4 {
  margin-left: 0;
}

.c2 + .c4:focus {
  margin-left: -3px;
}

.c2 + .c4 .carbon-icon {
  margin-left: 0;
}

.c0 .c3 {
  border-left-width: 2px;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c0 .c3:focus {
  margin: 0 -1px;
}

.c0 .c5 {
  width: 100%;
}

.c0 .carbon-icon.icon-dropdown {
  margin-right: -4px;
  top: 0px;
}

<div
  className="c0"
  size="medium"
>
  <div
    aria-haspopup="true"
    className="c1"
    data-component="multi-action-button"
    onMouseLeave={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup="true"
      aria-label="Show more"
      className="c2 c3 c4"
      data-element="toggle-button"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
      size="medium"
    >
      Test
      <span
        className="carbon-icon icon-dropdown"
        data-component="icon"
        data-element="dropdown"
      />
    </button>
  </div>
</div>
`;

exports[`MultiActionButton when rendered with "classic" theme should match the snapshot 1`] = `
.c5 > .c2 {
  margin: 0;
}

.c5 > .c2:focus {
  border: 3px solid #FFB500;
  outline: none;
  margin: -1px;
}

.c1 {
  display: inline-block;
  position: relative;
}

.c1 > .c2 {
  margin: 0;
}

.c1 > .c2:focus {
  border: 3px solid #FFB500;
  outline: none;
  margin: -1px;
}

.c1 > .c2:focus {
  border: 1px solid #1e499f;
  margin: 0;
}

.c6 + .c3 {
  margin-left: 16px;
}

.c2 + .c6 {
  margin-left: 0;
}

.c2 + .c6:focus {
  margin-left: -3px;
}

.c2 + .c6 .carbon-icon {
  margin-left: 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  border-radius: 0;
  font-size: 14px;
  height: 31px;
  line-height: 16px;
  margin-left: 0;
  margin-right: 0;
  padding: 0 18px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-left-width: 0;
  padding: 0 10px;
  z-index: 20;
}

.c4:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c4:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c4:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c4 + .c3 {
  margin-left: 15px;
}

.c4 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c2 + .c4 {
  margin-left: 0;
}

.c2 + .c4:focus {
  margin-left: -3px;
}

.c2 + .c4 .carbon-icon {
  margin-left: 0;
}

.c4.c4,
.c2 + .c4:focus {
  margin-left: 0;
  padding: 0 5px;
}

.c7 .c3 {
  border-left-width: 2px;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c7 .c3:focus {
  margin: 0 -1px;
}

.c8 .c3 {
  border-left-width: 2px;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c8 .c3:focus {
  margin: 0 -1px;
}

.c8 .c9 .c2 {
  text-align: right;
}

.c0 .c3 {
  border-left-width: 2px;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c0 .c3:focus {
  margin: 0 -1px;
}

.c0 .c9 {
  width: 100%;
}

.c0 .carbon-icon.icon-dropdown {
  margin-right: -4px;
  top: 0px;
}

.c0 .c3 {
  border-left-width: 1px;
}

.c0 .c3,
.c0 .c3:focus {
  margin: 0;
  height: 31px;
  padding: 7px 10px 7px 18px;
}

.c0 .c9 {
  padding-top: 5px;
  top: 29px;
  z-index: 12;
}

.c0 .c9 .c2 {
  border: none;
  border-radius: 0;
  color: #fff;
  display: block;
  margin-left: 0;
  min-width: 100%;
  padding-bottom: 5px;
  padding-top: 5px;
}

.c0 .c9 .c2:hover {
  background-color: #163777;
}

.c0 .carbon-icon.icon-dropdown {
  margin-right: 0;
}

<div
  className="c0"
  size="medium"
>
  <div
    aria-haspopup="true"
    className="c1"
    data-component="multi-action-button"
    onMouseLeave={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup="true"
      aria-label="Show more"
      className="c2 c3 c4"
      data-element="toggle-button"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
      size="medium"
    >
      Test
      <span
        className="carbon-icon icon-dropdown"
        data-component="icon"
        data-element="dropdown"
      />
    </button>
  </div>
</div>
`;

exports[`MultiActionButton when rendered with "classic" theme should match the snapshot 2`] = `
.c5 > .c2 {
  margin: 0;
}

.c5 > .c2:focus {
  border: 3px solid #FFB500;
  outline: none;
  margin: -1px;
}

.c1 {
  display: inline-block;
  position: relative;
}

.c1 > .c2 {
  margin: 0;
}

.c1 > .c2:focus {
  border: 3px solid #FFB500;
  outline: none;
  margin: -1px;
}

.c1 > .c2:focus {
  border: 1px solid #1e499f;
  margin: 0;
}

.c6 + .c3 {
  margin-left: 16px;
}

.c2 + .c6 {
  margin-left: 0;
}

.c2 + .c6:focus {
  margin-left: -3px;
}

.c2 + .c6 .carbon-icon {
  margin-left: 0;
}

.c7 + .c3 {
  margin-left: 15px;
}

.c2 + .c7 {
  margin-left: 0;
}

.c2 + .c7:focus {
  margin-left: -3px;
}

.c2 + .c7 .carbon-icon {
  margin-left: 0;
}

.c7.c7,
.c2 + .c7:focus {
  margin-left: 0;
  padding: 0 5px;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
  padding: 0 10px;
  z-index: 20;
}

.c4:focus {
  outline: solid 3px #FFB500;
}

.c4 + .c3 {
  margin-left: 16px;
}

.c4 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c2 + .c4 {
  margin-left: 0;
}

.c2 + .c4 .carbon-icon {
  margin-left: 0;
}

.c4.c4,
.c2 + .c4:focus {
  margin-left: 0;
  padding: 0 5px;
}

.c8 .c3 {
  border-left-width: 2px;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c8 .c3:focus {
  margin: 0 -1px;
}

.c9 .c3 {
  border-left-width: 2px;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c9 .c3:focus {
  margin: 0 -1px;
}

.c9 .c11 .c2 {
  text-align: right;
}

.c10 .c3 {
  border-left-width: 2px;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c10 .c3:focus {
  margin: 0 -1px;
}

.c10 .c3 {
  border-left-width: 1px;
}

.c10 .c3,
.c10 .c3:focus {
  margin: 0;
  height: 31px;
  padding: 7px 10px 7px 18px;
}

.c10 .c11 .c2 {
  border: none;
  border-radius: 0;
  color: #fff;
  display: block;
  margin-left: 0;
  min-width: 100%;
  padding-bottom: 5px;
  padding-top: 5px;
}

.c10 .c11 .c2:hover {
  background-color: #163777;
}

.c0 {
  background-color: white;
  box-shadow: 0 3px 10px 0 rgba(0,0,0,0.2);
}

.c0 .c3 {
  border-left-width: 2px;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c0 .c3:focus {
  margin: 0 -1px;
}

.c0 .c11 {
  width: 100%;
}

.c0 .carbon-icon.icon-dropdown {
  margin-right: -4px;
  top: 0px;
}

.c0 .c3 {
  border-left-width: 1px;
}

.c0 .c3,
.c0 .c3:focus {
  margin: 0;
  height: 31px;
  padding: 7px 10px 7px 18px;
}

.c0 .c11 {
  padding-top: 5px;
  top: 29px;
  z-index: 12;
}

.c0 .c11 .c2 {
  border: none;
  border-radius: 0;
  color: #fff;
  display: block;
  margin-left: 0;
  min-width: 100%;
  padding-bottom: 5px;
  padding-top: 5px;
}

.c0 .c11 .c2:hover {
  background-color: #163777;
}

.c0 .carbon-icon.icon-dropdown {
  margin-right: 0;
}

.c0 .c2 {
  color: #335B6D;
}

.c0 .c2:focus {
  background-color: #fff;
  color: #335B6D;
  box-shadow: none;
  outline: 0;
}

.c0 .c2:hover,
.c0 .c2:active {
  background-color: #E6EBED;
  color: #4782F7;
}

<div
  className="c0"
  size="medium"
>
  <div
    aria-haspopup="true"
    className="c1"
    data-component="multi-action-button"
    onMouseLeave={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup="true"
      aria-label="Show more"
      className="c2 c3 c4"
      data-element="toggle-button"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
      size="medium"
    >
      Test
      <span
        className="carbon-icon icon-dropdown"
        data-component="icon"
        data-element="dropdown"
      />
    </button>
  </div>
</div>
`;
